Fix scrollbar bugs

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100vw;
+    margin: 0rem;
+    padding: 0rem;
+    height: 100%;
+    width: 100%;
 }
