--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,8 +1,15 @@
 .web-container{
     background-image: linear-gradient(to bottom, #585191, #70A9A1);
-    min-height: 100vh;
-    height: 100%;
-    width: 100%;
     display: grid;
     grid-template-rows: auto 1fr;
+    height: 100vh;
+    width: 100vw;
+    min-height: 100vh;
+}
+
+.page-container {
+    margin: 0rem;
+    padding: 0rem;
+    overflow-y: auto;
+    overflow-x: auto;
 }
